# pigame

./: .gitignore  CMakeLists.txt  README.md  build.sh  hello  meson.build  pigame.c
src/: main.c
subprojects/: .gitignore
